Fixed Items.is(Item ...) to return true for members of Items.elements